# binary_patcher

./: .gitignore  README.md  pyproject.toml  requirements-build.txt  requirements.txt
.github/workflows/: build.yml
scripts/: build.bat  build.py
src/: apply_patch.py  binary_patcher.py
