[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "binary-patcher"
version = "1.0.0"
description = "A small tool for creating and applying binary patches with bsdiff4"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "bsdiff4>=1.2.6",
]
authors = [
  { name = "Project Maintainer" }
]

[tool.setuptools]
py-modules = ["binary_patcher", "apply_patch"]

[tool.setuptools.package-dir]
"" = "src"